external-crates/move/crates/move-compiler/tests/move_check/unit_test/attribute_location_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02015]: invalid attribute
  ┌─ tests/move_check/unit_test/attribute_location_invalid.move:5:7
  │
5 │     #[expected_failure(abort_code = 0)]
  │       ^^^^^^^^^^^^^^^^
  │       │
  │       Known attribute 'expected_failure' is not expected with a struct
  │       Expected to be used with one of the following: function
